# otus-2019-03-01

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
cli/: CMakeLists.txt  main.cpp
lib/: app_version.cpp  app_version.h
test/: CMakeLists.txt  test.cpp
version/: app_version.cpp  current_version.h.in
